# ecliptix-opaque

./: .dockerignore  .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.android  Dockerfile.linux  Dockerfile.windows  LICENSE  MIGRATION_PLAN.md  README.md  SECURITY.md  build-and-test.sh  build-android.sh  build-ios.sh  build-macos.sh  build-windows.bat  build-windows.ps1  build-xcframework.sh  build.sh  docker-compose.yml  generate_keys.cpp  main.cpp  run-benchmarks.sh  run-generate-vectors.sh  run-security-tests.sh  vcpkg.json
.deps/libsodium-1.0.20/: config.status  libsodium.pc  libtool
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: benchmarks.yml  build-and-publish.yml  ci.yml  client-builds.yml  release.yml  security-scan.yml  server-builds.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/lib/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
benchmarks/: CMakeLists.txt  bench_utils.h
benchmarks/micro/: bench_micro_primitives.cpp
benchmarks/overhead/: bench_wire_overhead.cpp
benchmarks/protocol/: bench_protocol_phases.cpp
benchmarks/throughput/: bench_throughput.cpp
client/: CMakeLists.txt  exports.txt
cmake/: CodeProtection.cmake  LLVMObfuscator.cmake  android-toolchain.cmake  ios-toolchain.cmake  macos-toolchain.cmake  mingw-toolchain.cmake
cmake/client/: CMakeLists.txt
cmake/server/: CMakeLists.txt
docs/: ALGORITHMS.md  BRANCH_PROTECTION.md  PROTECTION.md  SCIENTIFIC_PAPER.md  SCIENTIFIC_PAPER_PLAN.md  SCIENTIFIC_PAPER_REVISED.md  bench_windows_full.txt  benchmark_comparison.md  complete_test_benchmark_results.md  final_improvements_report.md  hybrid_pq_opaque_complete_report.md  improvements_summary.md  main.tex
docs/isms/: ASSET_INVENTORY.md  INCIDENT_RESPONSE_PLAN.md  INFORMATION_SECURITY_POLICY.md  README.md  RISK_ASSESSMENT_REGISTER.md  SECURE_CODING_GUIDELINES.md
docs/paper/: 00_abstract.md  01_introduction.md  02_related_work.md  03_problem_statement.md  04_protocol.md  ASSEMBLY_INSTRUCTIONS.md  README.md  section5_4_formal_verification.md
docs/security-review/: API_SURFACE.md  BUILD_AND_TEST.md  DEPENDENCIES.md  LIMITATIONS.md  PROTOCOL_SUMMARY.md  README.md  RFP.md  TEST_VECTORS.md  THREAT_MODEL.md
docs/visualizations/: key_derivation_3d.py  lattice_3d.py  performance_3d.py  security_surface_3d.py  threat_landscape_3d.py
formal/: README.md  hybrid_pq_opaque.pv  hybrid_pq_opaque.spthy  hybrid_pq_opaque_ascii.spthy  hybrid_pq_opaque_auth.pv  hybrid_pq_opaque_verified.spthy
formal/logs/: FULL_VERIFICATION_REPORT.md
include/opaque/: client.h  debug_log.h  export.h  hardcoded_keys.h  initiator.h  opaque.h  pq.h  protocol.h  responder.h  secure_cleanup.h  server.h  version.h
nuget/: Ecliptix.Security.OPAQUE.nuspec  build-nuget.sh  build-packages.sh  nuget.config
nuget/Ecliptix.OPAQUE.Agent/: Ecliptix.OPAQUE.Agent.csproj  README.md
nuget/Ecliptix.OPAQUE.Agent/src/: OpaqueAgent.cs  OpaqueAgentNative.cs  OpaqueAgentState.cs  OpaqueClient.cs  OpaqueClientNative.cs  OpaqueClientState.cs  OpaqueConstants.cs  OpaqueException.cs
nuget/Ecliptix.OPAQUE.Client/: Ecliptix.OPAQUE.Client.csproj  README.md
nuget/Ecliptix.OPAQUE.Client/src/: OpaqueClient.cs  OpaqueClientNative.cs  OpaqueClientState.cs  OpaqueConstants.cs  OpaqueResult.cs
nuget/Ecliptix.OPAQUE.Relay/: Ecliptix.OPAQUE.Relay.csproj  README.md
nuget/Ecliptix.OPAQUE.Relay/src/: OpaqueConstants.cs  OpaqueRelay.cs  OpaqueRelayNative.cs  OpaqueRelayState.cs  OpaqueResult.cs  OpaqueServer.cs  OpaqueServerNative.cs  OpaqueServerState.cs
nuget/Ecliptix.OPAQUE.Server/: Ecliptix.OPAQUE.Server.csproj  README.md
nuget/Ecliptix.OPAQUE.Server/src/: OpaqueConstants.cs  OpaqueResult.cs  OpaqueServer.cs  OpaqueServerNative.cs  OpaqueServerState.cs
nuget/output/: Ecliptix.OPAQUE.Agent.1.0.0.nupkg  Ecliptix.OPAQUE.Agent.1.0.0.snupkg  Ecliptix.OPAQUE.Relay.1.0.0.nupkg  Ecliptix.OPAQUE.Relay.1.0.0.snupkg
rust/: Cargo.toml
rust/crates/opaque-agent/: Cargo.toml
rust/crates/opaque-agent/benches/: bench_protocol.rs  bench_throughput.rs
rust/crates/opaque-agent/src/: authentication.rs  lib.rs  registration.rs  state.rs
rust/crates/opaque-agent/tests/: integration.rs  security_properties.rs  security_proptest.rs
rust/crates/opaque-core/: Cargo.toml
rust/crates/opaque-core/benches/: bench_micro.rs  bench_pq_overhead.rs
rust/crates/opaque-core/src/: crypto.rs  envelope.rs  lib.rs  oprf.rs  pq_kem.rs  protocol.rs  types.rs
rust/crates/opaque-core/tests/: crypto_tests.rs  envelope_tests.rs  oprf_tests.rs  pq_kem_tests.rs  protocol_tests.rs
rust/crates/opaque-ffi/: Cargo.toml
rust/crates/opaque-ffi/src/: agent_ffi.rs  lib.rs  relay_ffi.rs
rust/crates/opaque-relay/: Cargo.toml
rust/crates/opaque-relay/src/: authentication.rs  lib.rs  registration.rs  state.rs
rust/crates/opaque-relay/tests/: server_tests.rs
scripts/: build-ios-deps.sh
security_tests/: CMakeLists.txt  test_cross_session_isolation.cpp  test_kem_robustness.cpp  test_security_properties.cpp  test_session_key_independence.cpp
server/: CMakeLists.txt
src/client/: authentication.cpp  key_management.cpp  opaque_client.cpp  registration.cpp
src/core/: crypto.cpp  envelope.cpp  memory.cpp  oprf.cpp  pq_kem.cpp  protocol.cpp
src/initiator/: authentication.cpp  key_management.cpp  registration.cpp
src/interop/: client_exports.cpp  initiator_exports.cpp  responder_exports.cpp  server_exports.cpp
src/interop/jni/: OpaqueJni.cpp
src/responder/: authentication.cpp  registration.cpp  server.cpp
src/server/: authentication.cpp  credential_store.cpp  registration.cpp  server.cpp
swift/: Package.swift
test_vectors/: CMakeLists.txt  generate_test_vectors.cpp
tests/: CMakeLists.txt  test_opaque_protocol.cpp
tests/integration/: full_protocol_flow_test.cpp
tests/unit/core/: cryptographic_primitives_test.cpp  envelope_cryptography_test.cpp  oprf_operations_test.cpp  secure_memory_test.cpp
vcpkg-overlay/liboqs/: portfile.cmake  vcpkg.json
(+139 files in other folders)
